feature(travel): view trips stats
