# src/controllers/request.controller.js
@@ -3,14 +3,21 @@ import responseHandlers from '../utils/responseHandlers';
 import statusCodes from '../utils/statusCodes';
 import customMessages from '../utils/customMessages';
 import RequestService from '../services/request.service';
+import Validators from '../utils/validators';
 
-const { handleTripRequest, getMostTraveledDestinations, acceptRequest } = RequestService;
+const { 
+  handleTripRequest, 
+  getMostTraveledDestinations,
+  acceptRequest,
+  getTripsStats 
+} = RequestService;
 const {
   oneWayTripRequestCreated, emptyReqId,
   duplicateTripRequest, placesRetrieved, noPlacesRetrieved
  } = customMessages;
 const { created, badRequest, ok, notFound } = statusCodes;
 const { successResponse, errorResponse, } = responseHandlers;
+const { validateTripsStatsTimeframe } = Validators;
 
 /**
    * @description Trip requests controller class
@@ -47,6 +54,27 @@ export default class RequestController {
       successResponse(res, ok, placesRetrieved, null, destinationCount);
     } else {
       errorResponse(res, notFound, noPlacesRetrieved);
+    }
+  }
+
+/**
+  * @param {Request} req Node/express request
+  * @param {Response} res Node/express response
+  * @returns {Object} retrieves trips stats
+  * @description retrieves trip requests' stats in a particular timeframe
+  */
+ static async getTripsStats(req, res) {
+   try {
+     const timeframe = req.query;
+     const {
+       startDate,
+       endDate,
+     } = await validateTripsStatsTimeframe(timeframe);
+     const { id: userId } = req.sessionUser;
+     const tripsMade = await getTripsStats(userId, startDate, endDate);
+     return successResponse(res, ok, undefined, undefined, { startDate, endDate, tripsMade });
+    } catch (error) {
+     return errorResponse(res, statusCodes.badRequest, error.message);
     }
   }
 }
